--- a/SMS/SMS/Views/Admin/CreateSection.cshtml
+++ b/SMS/SMS/Views/Admin/CreateSection.cshtml
@@ -1,21 +1,6 @@
-﻿@model SMS.Models.School_Class
+﻿@model SMS.Models.SectionVM
 
-<style>
-    .ie-panel {
-        display: none;
-        background: #212121;
-        padding: 10px 0;
-        box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);
-        clear: both;
-        text-align: center;
-        position: relative;
-        z-index: 1;
-    }
-
-    html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {
-        display: block;
-    }
-</style>
+<title>Add Section</title>
 
 <style>
     body {
@@ -93,6 +78,7 @@
         vertical-align: middle;
         padding: 12px 0;
         text-align: center;
+        color: 153;
     }
 
         .submit-link:hover {
@@ -107,46 +93,57 @@
     .dropdown:hover .dropdown-content {
         display: block;
     }
-
-    b {
-        color: #ECCF3E;
-        font-size: 19px;
-    }
 </style>
-
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    <title>Add Class</title>
+
     <div class="form-horizontal">
-        <h4>Add Class</h4>
+        <h4>SectionVM</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <p>
-                    <font size="4">
-                        <input type="Number" id="name" name="Name" min="1" max="10" style="width : 200px">
-                    </font>
-                </p>
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
+        <div class="form-group">
+            &emsp;&emsp;  <b>Section Incharge</b>
+            &emsp;&emsp;
+            @{
+                var id = Request.Url.Segments[3];
+                int i = 0;
+            }
 
+            <select name="TeacherNames" id="cmb">
 
-
+                @foreach (var teacher in ViewBag.Teachers)
+                {
+                    <option value="@ViewBag.Ids[i]">@teacher</option>
+                    i++;
+                }
+            </select>
+            @Html.ValidationMessageFor(model => model.TeacherId, "", new { @class = "text-danger" })
+        </div>
+        <p name="Id"></p>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="submit-link submit" />
+                <input value="Create" class="btn btn-default" type="submit" />
             </div>
         </div>
     </div>
+                }
+@{
+    var id2 = Request.Url.Segments[3];
 }
-
 <div>
-    @Html.ActionLink("Back to List", "Class")
+    @Html.ActionLink("Back To List", "Section", new { id = id2 })
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
