--- a/SMS/SMS/Views/Admin/AddStudent.cshtml
+++ b/SMS/SMS/Views/Admin/AddStudent.cshtml
@@ -1,6 +1,5 @@
 ﻿@model SMS.Models.PersonVM
 
-
 <style>
     .ie-panel {
         display: none;
@@ -109,10 +108,6 @@
         display: block;
     }
 
-    b {
-        color: #ECCF3E;
-        font-size: 19px;
-    }
 </style>
 
 
@@ -159,7 +154,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                &emsp; &emsp;<input type="datetime-local" name="bdaytime">
+                &emsp; &emsp;<input type="date" name="bdaytime">
             </div>
         </div>
 
@@ -168,25 +163,34 @@
             @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
             @*<div class="form-group">*@
             &emsp;  &emsp;<textarea rows="5" cols="32" name="Address" placeholder="Enter address here....."></textarea><br>
-
+            <br />
             <div class="form-group">
-                &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong name="RegNo">Registration No.</strong> &nbsp;&nbsp;&nbsp; <input type="text" name="regNum"><br><br />
+                &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong name="RegNo">Registration No.</strong> &nbsp;&nbsp;&nbsp; <input type="text" name="regNum">
             </div>
-
+            </div>
             <div class="form-group">
-                <p>
-                    &emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-                    <input type="submit" class="submit-link submit" font-size="100px" value="Add">
+                <div class="col-md-10">
+                    &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; &emsp; 
+                        <b>Fee</b>
+
+                        <font size="4">
+                            &emsp;  &nbsp;&nbsp;&nbsp;  <input type="Number" name="Fee" min="200" max="10000" style="width : 200px" step="50">
+                        </font>
+                    
+                   </div>
+                </div> 
+                    <div class="form-group">
+                        <p>
+                            &emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                            <input type="submit" class="submit-link submit" font-size="100px" value="Add">
+                    </div>
+                </div>
+                
+            }
+
+            <div>
+                @Html.ActionLink("Back to List", "Student")
+                <br /><br /><br /><br />
             </div>
-        </div>
-
-    </div>
-
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Student")
-    <br /><br /><br /><br />
-</div>
 
 
