--- a/SMS/SMS/Views/Admin/EditStudent.cshtml
+++ b/SMS/SMS/Views/Admin/EditStudent.cshtml
@@ -33,6 +33,17 @@
                     @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
                 </div>
             </div>*@
+        <div class="form-group">
+            <div class="col-md-10">
+                &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; &emsp;
+                <b>Fee</b>
+
+                <font size="4">
+                    &emsp;  &nbsp;&nbsp;&nbsp;  <input type="Number" name="Fee" min="200" max="10000" style="width : 200px" step="50">
+                </font>
+
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
