--- a/SMS/SMS/Views/Admin/Student.cshtml
+++ b/SMS/SMS/Views/Admin/Student.cshtml
@@ -155,6 +155,7 @@
             <th>
                 SectionId
             </th>
+            <th>Fee Details</th>
             <th>
                 Update
             </th>
@@ -173,8 +174,10 @@
                     @Html.DisplayFor(modelItem => item.SectionId)
                 </td>
                 <td>
+                    @Html.ActionLink("View Fee Details", "FeeChallans", new { id = item.Id })
+                </td>
+                <td>
                     @Html.ActionLink("Edit", "EditStudent", new { id = item.Id }) |
-
                     @Html.ActionLink("Delete", "DeleteStudent", new { id = item.Id })
                 </td>
             </tr>
