Updated TimeTable for multiple Courses

--- a/SMS/SMS/Views/Admin/ViewTimeTable.cshtml
+++ b/SMS/SMS/Views/Admin/ViewTimeTable.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<SMS.Models.ViewTimeTable>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add TimeTable", "AddTimetable")
 </p>
 <table class="table">
     <tr>
