Updated Add Function for Students and Teachers. Added view for student details and teacher details.

--- a/SMS/SMS/Views/Admin/EditStudent.cshtml
+++ b/SMS/SMS/Views/Admin/EditStudent.cshtml
@@ -33,7 +33,7 @@
                     @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
                 </div>
             </div>*@
-        <div class="form-group">
+        @*<div class="form-group">
             <div class="col-md-10">
                 &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; &emsp;
                 <b>Fee</b>
@@ -43,7 +43,7 @@
                 </font>
 
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
