--- a/SMS/SMS/Views/Admin/Student.cshtml
+++ b/SMS/SMS/Views/Admin/Student.cshtml
@@ -159,9 +159,6 @@
                 Fee Details
             </th>
             <th>
-                Student Details
-            </th>
-            <th>
                 Update
             </th>
         </tr>
@@ -182,10 +179,8 @@
                     @Html.ActionLink("Fee Details", "FeeChallans", new { id = item.Id })
                 </td>
                 <td>
-                    @Html.ActionLink("View Student Details", "StudentDetails", new { id = item.Id })
-                </td>
-                <td>
                     @Html.ActionLink("Edit", "EditStudent", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "StudentDetails", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "DeleteStudent", new { id = item.Id })
                 </td>
             </tr>
