--- a/SMS/SMS/Views/Admin/AddStudent.cshtml
+++ b/SMS/SMS/Views/Admin/AddStudent.cshtml
@@ -154,7 +154,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                &emsp; &emsp;<input type="date" name="bdaytime">
+                &emsp; &emsp;<input type="date" name="DateOfBirth">
             </div>
         </div>
 
