--- a/SMS/SMS/Views/Admin/AddTeacher.cshtml
+++ b/SMS/SMS/Views/Admin/AddTeacher.cshtml
@@ -109,10 +109,6 @@
         display: block;
     }
 
-    b {
-        color: #ECCF3E;
-        font-size: 19px;
-    }
 </style>
 
 
@@ -162,7 +158,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                &emsp; &emsp;<input type="datetime-local" name="bdaytime">
+                &emsp; &emsp;<input type="date" name="DateOfBirth">
             </div>
         </div>
 
@@ -175,6 +171,17 @@
             <div class="form-group">
                 &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong name="RegNo">Email</strong>
                 &nbsp;&nbsp;&nbsp; <input type="text" name="Email"><br><br />
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; &emsp;
+                    <b>Salary</b>
+
+                    <font size="4">
+                        &emsp;  &nbsp;&nbsp;&nbsp;  <input type="Number" name="Salary" min="2000" max="50000" style="width : 200px" step="1000">
+                    </font>
+
+                </div>
             </div>
 
             <div class="form-group">
