--- a/SMS/SMS/Views/Admin/FeeChallans.cshtml
+++ b/SMS/SMS/Views/Admin/FeeChallans.cshtml
@@ -1,10 +1,110 @@
 ﻿@model IEnumerable<SMS.Models.FeeChallan>
+<title>Fee Details</title>
+@{ Layout = null;}
 
-<table class="table">
+
+<style>
+    body {
+        font-family: Calisto MT;
+        margin: 0;
+    }
+
+    table {
+        font-family: Calisto MT, sans-serif;
+        border-collapse: collapse;
+        width: 70%;
+    }
+
+    td, th {
+        border: 1px solid #F0E68C;
+        text-align: center;
+        padding: 8px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #FAFAD2;
+    }
+
+
+    /* Style the top navigation bar */
+    .navbar {
+        overflow: hidden;
+        background-color: #333;
+        font-family: Calisto MT;
+    }
+
+        .navbar a {
+            float: right;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 17px;
+            text-decoration: none;
+        }
+
+
+    input {
+        border: none;
+        box-sizing: border-box;
+        border-bottom: 1px solid black;
+        background: transparent;
+        color: #b18757;
+        font-weight: bold;
+        font-family: 'Poppins';
+        font-size: 20px;
+    }
+
+    .submit {
+        width: 130px;
+        border-radius: 25px;
+        -moz-border-radius: 25px;
+        -webkit-border-radius: 25px;
+        text-transform: uppercase;
+        font-size: 13px;
+        cursor: pointer;
+    }
+
+    .submit-link {
+        border: 2px solid #b18757;
+        text-decoration: none;
+        display: inline-block;
+        vertical-align: middle;
+        padding: 12px 0;
+        text-align: center;
+    }
+
+        .submit-link:hover {
+            background: #FAFAD2;
+            color: #b18757;
+        }
+
+    .dropdown-content a:hover {
+        background-color: #ddd;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    b {
+        color: #ECCF3E;
+        font-size: 19px;
+    }
+</style>
+
+<br />
+
+<h2 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Fee Details </h2>
+<br>
+
+
+        &emsp; &emsp; &emsp;
+<b>Student Registration Number :   &emsp;&emsp;   &emsp; &emsp;  @ViewBag.RegNo</b>
+
+<br />
+<br />
+<table align="center">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.StudentId)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.Fee)
         </th>
@@ -15,7 +115,7 @@
             @Html.DisplayNameFor(model => model.Fine)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TotalFee)
+           Payable
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Status)
@@ -26,11 +126,7 @@
     var id = Request.Url.Segments[3];   
 }
    @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.StudentId)
-        </td>
-        <td>
+    <tr><td>
             @Html.DisplayFor(modelItem => item.Fee)
         </td>
         <td>
@@ -42,13 +138,30 @@
         <td>
             @Html.DisplayFor(modelItem => item.TotalFee)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
+
+        @if (item.Status == 4)
+        {
+            <td>
+                UnPaid
+            </td>
+        }
+        else
+        {
+            <td>
+                Paid
+            </td>
+        } <td>
             @Html.ActionLink("Update", "EditFeeChallans", new {id = item.FeeChallanId, StudentId = id }) 
             </td>
     </tr>
 }
 
 </table>
+<br/>
+
+<br />
+<br />
+<div>
+
+    &emsp; &emsp; &emsp;     @Html.ActionLink("Back to Students", "Student")
+</div>
