Updated Edit of Student, Delete of Student and Teacher. Made changes in front end of Student and teacher details.

--- a/SMS/SMS/Views/Admin/AddStudent.cshtml
+++ b/SMS/SMS/Views/Admin/AddStudent.cshtml
@@ -165,7 +165,8 @@
             &emsp;  &emsp;<textarea rows="5" cols="32" name="Address" placeholder="Enter address here....."></textarea><br>
             <br />
             <div class="form-group">
-                &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong name="RegNo">Registration No.</strong> &nbsp;&nbsp;&nbsp; <input type="text" name="regNum">
+                &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong name="RegNo">Registration No.</strong> &nbsp;&nbsp;&nbsp; 
+                <input type="text" name="regNum">
             </div>
             </div>
             <div class="form-group">
