--- a/SMS/SMS/Views/Admin/Class.cshtml
+++ b/SMS/SMS/Views/Admin/Class.cshtml
@@ -286,7 +286,7 @@
         </h3>
     }
     <br />
-    @if (ViewBag.Classes < 10)
+    @if (ViewBag.Students < 15)
     {
         <h3>
             &emsp; &emsp;    @Html.ActionLink("Add New Class", "CreateClass")
