--- a/SMS/SMS/Views/Admin/EditTeacher.cshtml
+++ b/SMS/SMS/Views/Admin/EditTeacher.cshtml
@@ -18,13 +18,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Salary, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Salary, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Salary, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.InchSec, htmlAttributes: new { @class = "control-label col-md-2" })
