--- a/SMS/SMS/Views/Admin/Student.cshtml
+++ b/SMS/SMS/Views/Admin/Student.cshtml
@@ -1,7 +1,37 @@
 ﻿@model IEnumerable<SMS.Models.Student>
 <title>Manage Students</title>
 
+@{ Layout = null;}
 <head>
+    <meta charset="UTF-8" name="viewport" content="width-device=width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="~/css/bootstrap.css" />
+    <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="~/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700%7CZilla+Slab:300,400,500,700,700i%7CGloria+Hallelujah">
+    <link rel="stylesheet" href="~/css/bootstrap.css">
+    <link rel="stylesheet" href="~/css/fonts.css">
+    <link rel="stylesheet" href="~/css/style.css">
+    <style>
+        .ie-panel {
+            display: none;
+            background: #212121;
+            padding: 10px 0;
+            box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);
+            clear: both;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {
+            display: block;
+        }
+    </style>
+
+
+
     <style>
         .ie-panel {
             display: none;
@@ -40,7 +70,6 @@
         tr:nth-child(even) {
             background-color: #FAFAD2;
         }
-
 
         /* Style the top navigation bar */
         .navbar {
@@ -116,6 +145,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="navbar">
         <div class="dropdown">
@@ -126,26 +156,144 @@
             </div>
         </div>
     </div>
-    <h1 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Manage Student </h1>
+
+    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="~/images/o.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
+    <div class="preloader">
+        <div class="preloader-logo">
+            <a class="brand" href="index.html"><img class="brand-logo-dark" src="~/images/_blank.png" alt="" width="245" height="50" /><img class="brand-logo-light" src="~/images/logo-inverse-245x50.png" alt="" width="245" height="50" /></a>
+        </div>
+        <div class="preloader-body">
+            <div class="cssload-container">
+                <div class="cssload-speeding-wheel"></div>
+            </div>
+        </div>
+    </div>
+    <div class="page">
+        <!-- Page Header-->
+        <header class="page-header">
+            <!-- RD Navbar-->
+            <div class="rd-navbar-wrap">
+                <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed">
+                    <div class="rd-navbar-main-outer">
+                        <div class="rd-navbar-main">
+                            <!-- RD Navbar Panel-->
+                            <div class="rd-navbar-panel">
+                                <!-- RD Navbar Toggle-->
+                                <!-- RD Navbar Brand-->
+
+                            </div>
+                            <div class="rd-navbar-nav-wrap">
+                                <!-- RD Navbar Nav    -->
+                                <ul class="rd-navbar-nav">
+                                    <li class="rd-nav-item active">
+                                        <a class="rd-nav-link" href="index.html">Home</a>
+                                    </li>
+                                    <li class="rd-nav-item">
+                                        <a class="rd-nav-link" href="about.html">About</a>
+                                    </li>
+                                    <li class="rd-nav-item">
+                                        <a class="rd-nav-link" href="typography.html">Typography</a>
+                                    </li>
+                                    <li class="rd-nav-item">
+                                        <a class="rd-nav-link" href="contacts.html">Contacts</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <section>
+            <!-- Swiper-->
+            <div class="swiper-container swiper-slider swiper-slider-1" data-loop="false" data-autoplay="5000" data-simulate-touch="false">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide" data-slide-bg="../images/ol.jpg">
+                        <div class="swiper-slide-caption context-dark">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-10 col-lg-7">
+                                        <div class="box-animation">
+                                            <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Quality Higher Education</h6>
+                                            <h2 data-caption-animate="slideInLeft" data-caption-delay="300">
+                                                Any Successful Career Starts  <span class="text-italic font-weight-bold">With Good Education</span>
+                                            </h2>
+                                            <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450">
+                                                <a class="button button-primary-gradient"
+                                                   ="#"><span>sign up for excursion</span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide" data-slide-bg="../images/v.jpeg">
+                        <div class="swiper-slide-caption context-dark">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-10 col-lg-7">
+                                        <div class="box-animation">
+                                            <h6 data-caption-animate="slideInLeft" data-caption-delay="150">A vAriety of programs</h6>
+                                            <h2 data-caption-animate="slideInLeft" data-caption-delay="300">
+                                                Providing Students with  <span class="text-italic font-weight-bold">Professional Education</span>
+                                            </h2>
+                                            <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign up for excursion</span></a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide" data-slide-bg="../images/s.jpeg">
+                        <div class="swiper-slide-caption context-dark">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-10 col-lg-7">
+                                        <div class="box-animation">
+                                            <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Campus Community</h6>
+                                            <h2 data-caption-animate="slideInLeft" data-caption-delay="300">
+                                                Become a Part of Our Campus and <span class="text-italic font-weight-bold">Make Friends</span>
+                                            </h2>
+                                            <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign up for excursion</span></a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </section>
+        <!-- A Few Words About Me-->
+
+
+    </div>
+    <div class="snackbars" id="form-output-global"></div>
+    <script src="~/js/core.min.js"></script>
+    <script src="~/js/script.js"></script>
+    <br>
+
+    <h2 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Manage Student </h2>
     <br>
     @using (Html.BeginForm("Student", "Admin", FormMethod.Get))
     {
         <h3 style="font-family : Calisto MT">
-            &emsp; &emsp; Search Student&emsp; &emsp; &nbsp;
-            <input type="text" name="RegNo" id="Search" />
+            &emsp; &emsp; &emsp; &emsp;      
+            <input type="text" name="RegNo" id="Search" placeholder="Search Student">
 
             &emsp; &emsp; &emsp; &emsp;<input type="submit" class="submit-link submit" font-size="100px" value="Search" />
             &emsp; &emsp; &emsp; &emsp;
-        </h3>
+        </h3><br />
     }
-    <h3>
+         
+    <h3 style="color  :#ECCF3E; font-family : Calisto MT" >
         &emsp; &emsp;    @Html.ActionLink("Add New Student", "AddStudent")
-    </h3>
-    <br />
+    </h3><br /><br />
+    <table align='center'>
 
-    <table class="table" style="margin-top: 2cm;" border=0 align='center'>
-
-        <tr>
+        <tr bgcolor='#F0E68C'>
             <th>
                 RegNo.
             </th>
@@ -187,6 +335,7 @@
         }
 
     </table>
+    <br><br><br><br>
 
 </body>
 
