--- a/SMS/SMS/Views/Admin/EditStudent.cshtml
+++ b/SMS/SMS/Views/Admin/EditStudent.cshtml
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
                 @Html.LabelFor(model => model.ClassId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.ClassId, new { htmlAttributes = new { @class = "form-control" } })
@@ -32,7 +32,7 @@
                     @Html.EditorFor(model => model.SectionId, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.SectionId, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
         @*<div class="form-group">
             <div class="col-md-10">
                 &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; &emsp;
