--- a/SMS/SMS/Views/Admin/CreateSection.cshtml
+++ b/SMS/SMS/Views/Admin/CreateSection.cshtml
@@ -100,7 +100,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>SectionVM</h4>
+        <h4>Add Section</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
