--- a/SMS/SMS/Views/Admin/EditCourse.cshtml
+++ b/SMS/SMS/Views/Admin/EditCourse.cshtml
@@ -6,7 +6,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Course</h4>
+        <h4>Edit Course</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         
