--- a/SMS/SMS/Views/Admin/StudentDetails.cshtml
+++ b/SMS/SMS/Views/Admin/StudentDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SMS.Models.Person
 
 <div>
-    <h4>Person</h4>
+    <h4>Student Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
