Read, Update, Del for Results, Updated precision for ObtMarks

--- a/SMS/SMS/Views/Teacher/UploadResult.cshtml
+++ b/SMS/SMS/Views/Teacher/UploadResult.cshtml
@@ -135,5 +135,9 @@
             </div>
         </div>
 }
+@{ 
+    var Tid = ViewBag.Tid;
+}
+@Html.ActionLink("Back To Sections", "TeacherSections", new { id = Tid })
 
 
