--- a/SMS/SMS/Views/Teacher/LoggedInView.cshtml
+++ b/SMS/SMS/Views/Teacher/LoggedInView.cshtml
@@ -308,7 +308,7 @@
         &emsp; &emsp;&emsp; &emsp; &emsp; &emsp; My Profile
     </h3>
     &emsp; &emsp; @Html.ActionLink("My Sections", "TeacherSections", new { id = Tid })
-    &emsp; &emsp; @Html.ActionLink("Uploaded Results", "#")
+    &emsp; &emsp; @Html.ActionLink("Uploaded Results", "UploadedRes", new { id = Tid})
 
 
     <br><br><br><br>
