--- a/SMS/SMS/Views/Teacher/LoggedInView.cshtml
+++ b/SMS/SMS/Views/Teacher/LoggedInView.cshtml
@@ -309,6 +309,8 @@
     </h3>
     &emsp; &emsp; @Html.ActionLink("My Sections", "TeacherSections", new { id = Tid })
     &emsp; &emsp; @Html.ActionLink("Uploaded Results", "UploadedRes", new { id = Tid})
+    @Html.ActionLink("Upload Attendance", "MarkAttendance", new { id = Tid })
+
 
 
     <br><br><br><br>
