--- a/SMS/SMS/Views/Admin/AddPayroll.cshtml
+++ b/SMS/SMS/Views/Admin/AddPayroll.cshtml
@@ -1,5 +1,5 @@
 ﻿@model SMS.Models.PayrollVM
-<title>Edit Pay</title>
+<title> Add Pay </title>
 <style>
     body {
         font-family: Calisto MT;
@@ -96,20 +96,21 @@
     }
 </style>
 
+@{
+    var id = Request.Url.Segments[3];
+}
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Edit Pay</h4>
+        <h4>Add Payroll</h4>
         <hr />
-        &emsp;  &emsp;
-        <b>Teacher Name :   &emsp;&emsp;   &emsp;   @ViewBag.TName</b>
-
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Salary, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Salary, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="number" name="Salary" min="0" max="10000" style="width:250px" />
                 @Html.ValidationMessageFor(model => model.Salary, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -117,7 +118,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Bonus, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Bonus, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="number" name="Bonus" min="0" max="10000" style="width:250px" />
                 @Html.ValidationMessageFor(model => model.Bonus, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -125,7 +126,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Deductions, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Deductions, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="number" name="Deductions" min="0" max="10000" style="width:250px" step="1000" />
                 @Html.ValidationMessageFor(model => model.Deductions, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -143,15 +144,20 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                &emsp;<input type="date" name="Date">
+
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <p name="Id" style="display : none">@id</p>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                &emsp; &emsp;   <input type="submit" value="Save" class="submit-link submit" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
+
+<div>
+    @Html.ActionLink("Back to List", "Payrolls", new { id = id })
+</div>
