--- a/SMS/SMS/Views/Teacher/LoggedInView.cshtml
+++ b/SMS/SMS/Views/Teacher/LoggedInView.cshtml
@@ -298,18 +298,19 @@
             </div>
         </div>
     </div>
-
     @{
         var Tid = Request.Url.Segments[3];
     }
     <h2 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Welcome to ABC School System </h2>
     <br>
+    &emsp; &emsp; @Html.ActionLink("My Sections", "TeacherSections", new { id = Tid })
+    &emsp; &emsp; @Html.ActionLink("Uploaded Results", "UploadedRes", new { id = Tid })
+    &emsp; &emsp; @Html.ActionLink("My Payroll", "TeacherPayroll", new { id = Tid })
+
+
     <h3 style="color  :#ECCF3E; font-family : Calisto MT">
         &emsp; &emsp;&emsp; &emsp; &emsp; &emsp; My Profile
     </h3>
-    &emsp; &emsp; @Html.ActionLink("My Sections", "TeacherSections", new { id = Tid })
-    &emsp; &emsp; @Html.ActionLink("Uploaded Results", "UploadedRes", new { id = Tid})
-    @Html.ActionLink("Upload Attendance", "MarkAttendance", new { id = Tid })
 
 
 
