--- a/SMS/SMS/Views/Teacher/Result.cshtml
+++ b/SMS/SMS/Views/Teacher/Result.cshtml
@@ -30,15 +30,26 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @if (ViewBag.T == "")
+                {
+                    <input type="text" name="Title" placeholder="Title as 'Mid term | 2016-17'" required />
+                }
+                else
+                {
+                    <input type="text" name="Title" placeholder="Title as 'Mid term | 2016-17'" required value="@ViewBag.T" />
+
+                }
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+                <br />
+                &emsp; &emsp;<font size="3">
+                    <p style="background-color:rgba(254, 76, 76, 0.75) ;font-family : Calisto MT">@ViewBag.Err</p>
+                </font>
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.TotalMarks, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="number" name="TotalMarks" style="width : 200px" />
+                <input type="number" name="TotalMarks" style="width : 200px" required />
 
                 @Html.ValidationMessageFor(model => model.TotalMarks, "", new { @class = "text-danger" })
             </div>
