--- a/SMS/SMS/Views/Teacher/ResultSection.cshtml
+++ b/SMS/SMS/Views/Teacher/ResultSection.cshtml
@@ -1,8 +1,9 @@
 ﻿@model IEnumerable<SMS.Models.StudentResult>
-    @{ 
-        int i = 0;
-    }
-<br/>
+<title>Result | Section</title>
+@{
+    int i = 0;
+}
+<br />
 <font size="4">
     <p> &emsp;&emsp;&nbsp;Class : @ViewBag.Class<br /></p>
     <p> &emsp;&emsp; Section : @ViewBag.Section</p>
@@ -10,10 +11,22 @@
         &emsp;&emsp; Total Marks : @ViewBag.Total
 </font>
 
+@{
+    var id = Request.Url.Segments[3];
+}
+<br />
+<br />
+@if (@ViewBag.count > 0)
+{
+    <p> &emsp; &emsp; &emsp;@Html.ActionLink("Add Student Result for this section", "UploadResult", new { id = id })</p>
+}
+<br />
+<br />
+
 <table class="table">
     <tr>
-         <th>
-           Registration Number
+        <th>
+            Registration Number
         </th>
         <th>
             Obtained Marks
@@ -21,21 +34,22 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-       <td>
-           @ViewBag.RegNo[i]
-           @{
-               i++;
-           }
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ObtainedMarks)
-        </td>
-        <td>
-            @Html.ActionLink("Edit Result", "EditResult", new { id=item.Id }) 
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @ViewBag.RegNo[i]
+                @{
+                    i++;
+                }
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ObtainedMarks)
+            </td>
+            <td>
+                @Html.ActionLink("Edit Result", "EditResult", new { id = item.Id })
+            </td>
+        </tr>
+                    }
 
 </table>
