Updated edit, delete function for sections, classes, students and teachers. Made a few changes in views.

--- a/SMS/SMS/Views/Admin/Teacher.cshtml
+++ b/SMS/SMS/Views/Admin/Teacher.cshtml
@@ -308,6 +308,9 @@
                 InchargeOfSection
             </th>
             <th>
+                Password
+            </th>
+            <th>
                 Salary Details
             </th>
             <th>
@@ -329,6 +332,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.InchSec)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Password)
                 </td>
                 <td>
                     @Html.ActionLink("Pay Details", "Payrolls", new { id = item.Id })
